fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -20,9 +20,10 @@
 	text-decoration: none;
 }
 
-body {
-	background-color: #fff;
+.site-wrapper {
+	position: relative;
 	overflow-x: hidden;
+	min-height: 100vh;
 }
 
 /* ---------- header styling ---------- */
@@ -136,10 +137,12 @@ header .nav-menu a#active {
 	}
 
 	header .nav-menu {
+		gap: 0;
 		flex-direction: column;
 		align-items: center;
 		position: absolute;
 		width: 100vw;
+		height: 100%;
 		top: 100px;
 		right: 0;
 		background-color: #b57880;
@@ -152,7 +155,7 @@ header .nav-menu a#active {
 	}
 
 	header .nav-menu li {
-		margin: 100px;
+		margin-top: 100px;
 		opacity: 0;
 	}
 
